@@ -1,3 +1,9 @@
+2011-06-08  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.python/py-inferior.c (f2): Make str an array rather
+	than a pointer.
+	* gdb.python/py-inferior.exp: Adjust testcase accordingly.
+
 2011-06-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.base/async-shell.c: New file.
